'Added Navigation and Formatted Data Dashboars'

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="module" src="https://js.arcgis.com/calcite-components/3.2.1/calcite.esm.js"></script>
+
+<!-- Load the ArcGIS Maps SDK for JavaScript from CDN -->
+<link rel="stylesheet" href="https://js.arcgis.com/4.33/esri/themes/light/main.css" />
+<script src="https://js.arcgis.com/4.33/"></script>
+
+<!-- Load Charts components from CDN-->
+<script type="module" src="https://js.arcgis.com/4.33/charts-components/"></script>
     <meta charset="UTF-8" />
     <title>HopeMapper</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
 
